--- a/views/admin/edit-category.ejs
+++ b/views/admin/edit-category.ejs
@@ -1,18 +1,73 @@
 <section class="">
-    <div class="container d-flex justify-content-center">
-      <div class="row w-75 mt-5">
-        <div class="col-md-12">
-          <h2 class="text-center">Edit Category</h2>
-          <form
-            action="/admin/edit_category/<%= response._id %>"
-            method="POST"
-            
-          >
-            <label for="">Category Name</label>
-            <input type="text" name="categoryname"  class="form-control" value="<%= response.categoryName %>"/>
-            <button type="submit" class="btn btn-success mt-4">Submit</button>
-          </form>
-        </div>
+  <div class="container d-flex justify-content-center">
+    <div class="row w-75 mt-5">
+      <div class="col-md-12">
+        <h2 class="text-center">Edit Category</h2>
+        <form
+          action="/admin/edit_category/<%= response._id %>"
+          method="POST"
+          id="form"
+        >
+          <label for="">Category Name</label>
+          <input
+            type="text"
+            name="categoryname"
+            id="name"
+            required=""
+            onkeyup="validateName()"
+            class="form-control"
+            value="<%= response.categoryName %>"
+          />
+          <span id="name-error" class="validation-label"></span>
+          <br />
+          <button type="submit" class="btn btn-success mt-4">Submit</button>
+        </form>
       </div>
     </div>
-  </section>
+  </div>
+</section>
+
+<script>
+  let nameError = document.getElementById("name-error");
+  // let discritionError = document.getElementById("discription-error");
+
+  const regex = /^[^ ].*/;
+  function validateName() {
+    var name = document.getElementById("name").value;
+    var nameInput = document.getElementById("name");
+    console.log(name);
+    if (name.length == 0) {
+      nameError.innerHTML = "Name is required";
+      nameError.style.color = "red";
+      nameInput.style.border = "solid 2px red";
+      return false;
+    }
+    if (!name.match(regex)) {
+      nameError.innerHTML = "Write valid name";
+      nameError.style.color = "red";
+      nameInput.style.border = "solid 2px red";
+
+      return false;
+    }
+    nameError.innerHTML = "";
+    // nameError.innerHTML = "Valid Name";
+    nameError.style.color = "green";
+    nameInput.style.border = "solid 2px green";
+
+    return true;
+  }
+  const form = document.getElementById("form");
+
+  form.addEventListener("submit", (event) => {
+    event.preventDefault();
+    if (!validateName()) {
+      Swal.fire({
+        icon: "error",
+        title: "Enter details correctly!!",
+      });
+      return false;
+    } else {
+      form.submit();
+    }
+  });
+</script>
