--- a/views/user/address.ejs
+++ b/views/user/address.ejs
@@ -57,7 +57,7 @@
                         
                             <br>
                             <div style="width: 35rem; height: 3rem;background-color: whitesmoke; padding: 20px;">
-                              <a href="/add_address">
+                              <a href="/profile_add_address">
                                 <h5>+ Add an address</h5>
                               </a>
                         
