--- a/views/admin/add-category.ejs
+++ b/views/admin/add-category.ejs
@@ -13,7 +13,7 @@
         <form
           action="/admin/add_category"
           method="POST"
-          
+          id="form"
         >
           <label for="">Category Name</label>
           <input type="text" name="categoryname" id="name" class="form-control" required="" onkeyup="validateName()"/>
@@ -27,6 +27,12 @@
 </section>
 <!-- Table section -->
 <section w-50 mx-auto>
+  <% if(viewCategory.length==0){%>
+    <div class="d-flex justify-content-center align-items-center">
+      <h2 class="">No Orders Available</h2>
+
+    </div>
+    <%}else{%> 
   <div class="card-body">
     <div class="row mt-5 mx-auto">
       <div class="table-responsive">
@@ -63,6 +69,8 @@
       <!-- table-responsive end// -->
     </div>
   </div>
+  <%}
+    %>
 </section>
 <script>
 setTimeout(function() {
@@ -75,7 +83,6 @@ setTimeout(function() {
 
 const regex = /^[^ ].*/
 function validateName() {
-  console.log("lllll");
   var name = document.getElementById("name").value;
   var nameInput = document.getElementById("name");
 console.log(name);
@@ -98,4 +105,39 @@ console.log(name);
 
   return true;
 }
+function yes(){
+  Swal.fire({
+  title: 'Are you sure?',
+  text: "You won't be able to revert this!",
+  icon: 'warning',
+  showCancelButton: true,
+  confirmButtonColor: '#3085d6',
+  cancelButtonColor: '#d33',
+  confirmButtonText: 'Yes, delete it!'
+}).then((result) => {
+  if (result.isConfirmed) {
+    Swal.fire(
+      'Deleted!',
+      'Your file has been deleted.',
+      'success'
+    )
+  }
+})
+}
+const form = document.getElementById('form');
+
+form.addEventListener('submit', (event) => {
+    event.preventDefault();
+    if (
+      !validateName()) {
+  
+      Swal.fire({
+        icon: 'error',
+        title: 'Enter details correctly!!',
+      });
+      return false;
+    } else {
+      form.submit();
+    }
+  });
 </script>
