--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -5,7 +5,6 @@
         <h2 class="text-center">Add Product</h2>
         <form
           name="myform"
-          onsubmit="return validateImage()"
           id="form"
           action="/admin/add_product"
           method="POST"
@@ -17,8 +16,8 @@
             name="name"
             id="name"
             required=""
-            class="form-control"
             onkeyup="validateName()"
+            class="form-control"
           />
           <span id="name-error" class="validation-label"></span>
           <br />
@@ -28,8 +27,8 @@
             name="description"
             required=""
             id="description"
-            class="form-control"
             onkeyup="validateDescription()"
+            class="form-control"
           />
           <span id="description-error" class="validation-label"></span>
           <br />
@@ -44,6 +43,7 @@
             onkeyup="validatePrice()"
           />
           <span id="price-error" class="validation-label"></span>
+          <br />
           <label for="">Category</label>
 
           <select class="form-select" name="category" id="cars">
@@ -65,8 +65,10 @@
             onkeyup="validateQuantity()"
           />
           <span id="quantity-error" class="validation-label"></span>
+          <br />
           <label for="">Image</label>
           <input
+            onselect="validateImage()"
             type="file"
             name="file"
             required=""
@@ -75,151 +77,154 @@
             accept="file/*"
           />
 
-          <button type="submit" class="btn btn-success mt-4">Submit</button>
+          <button type="submit" class="btn btn-success mt-4 mb-4">
+            Submit
+          </button>
         </form>
       </div>
+      <br />
     </div>
   </div>
   <script defer src="https://cdn.crop.guide/loader/l.js?c=123ABC"></script>
 </section>
 <script>
-  const img = document.forms['myform']['file'];
-  const validExt = ['jpeg', 'png', 'jpg', 'webp'];
+  const img = document.forms["myform"]["file"];
+  const validExt = ["jpeg", "png", "jpg", "webp"];
   function validateImage() {
-    if (img.value !== '') {
-      const dot_pos = img.value.lastIndexOf('.') + 1;
+    if (img.value !== "") {
+      const dot_pos = img.value.lastIndexOf(".") + 1;
       const img_ext = img.value.substring(dot_pos);
       const result = validExt.includes(img_ext);
       if (result == false) {
-        swal.fire('OOPs!', 'Selected file is not an image!', 'error');
+        swal.fire("OOPs!", "Selected file is not an image!", "error");
         return false;
       } else {
         if (Number(img.files[0].size / (1024 * 1024)) >= 3) {
           swal.fire(
-            'OOPs!',
-            'Size must be smaller than 3 MB . Current size is :' +
+            "OOPs!",
+            "Size must be smaller than 3 MB . Current size is :" +
               Number(img.files[0].size / (1024 * 1024)),
-            'error'
+            "error"
           );
           // alert('Size must be smaller than 3 MB . Current size is :' + Number(img.files[0].size/(1024*1024)))
         }
       }
     } else {
-      swal.fire('error', 'No image is selected...', 'error');
+      swal.fire("error", "No image is selected...", "error");
       // alert('No image is selected...');
       return false;
     }
     return true;
   }
 
-  const nameError = document.getElementById('name-error');
-  const descriptionError = document.getElementById('description-error');
-  const priceError = document.getElementById('price-error');
-  const quantityError = document.getElementById('quantity-error');
-  const formError = document.getElementById('form-error');
-  const form = document.getElementById('form');
+  const nameError = document.getElementById("name-error");
+  const descriptionError = document.getElementById("description-error");
+  const priceError = document.getElementById("price-error");
+  const quantityError = document.getElementById("quantity-error");
+  const formError = document.getElementById("form-error");
+  const form = document.getElementById("form");
 
   function validateName() {
-    var name = document.getElementById('name').value;
-    var nameInput = document.getElementById('name');
+    var name = document.getElementById("name").value;
+    var nameInput = document.getElementById("name");
     if (name.length == 0) {
-      nameError.innerHTML = 'Name is required';
-      nameError.style.color = 'red';
-      nameInput.style.border = 'solid 2px red';
+      nameError.innerHTML = "Name is required";
+      nameError.style.color = "red";
+      nameInput.style.border = "solid 2px red";
       return false;
     }
-    if (!name.match(/^[A-Za-z]{3,}$/)) {
-      nameError.innerHTML = 'Write valid name';
-      nameError.style.color = 'red';
-      nameInput.style.border = 'solid 2px red';
+    if (!name.match(/^[A-Z a-z 0-9]{3,}$/)) {
+      nameError.innerHTML = "Write valid name";
+      nameError.style.color = "red";
+      nameInput.style.border = "solid 2px red";
 
       return false;
     }
-    nameError.innerHTML = '';
+    nameError.innerHTML = "";
     // nameError.innerHTML = "Valid Name";
-    nameError.style.color = 'green';
-    nameInput.style.border = 'solid 2px green';
+    nameError.style.color = "green";
+    nameInput.style.border = "solid 2px green";
 
     return true;
   }
   function validateDescription() {
-    const description = document.getElementById('description').value;
-    const descriptionInput = document.getElementById('description');
+    const description = document.getElementById("description").value;
+    const descriptionInput = document.getElementById("description");
     console.log(name);
     if (description.length == 0) {
-      descriptionError.innerHTML = 'Discription is required';
-      descriptionError.style.color = 'red';
-      descriptionInput.style.border = 'solid 2px red';
+      descriptionError.innerHTML = "Discription is required";
+      descriptionError.style.color = "red";
+      descriptionInput.style.border = "solid 2px red";
       return false;
     }
-    if (!description.match(/^[A-Za-z]{3,}$/)) {
-      descriptionError.innerHTML = 'Write valid discription';
-      descriptionError.style.color = 'red';
-      nameInput.style.border = 'solid 2px red';
+    if (!description.match(/^[0-9 A-Z a-z]{3,}$/)) {
+      descriptionError.innerHTML = "Write valid discription";
+      descriptionError.style.color = "red";
+      nameInput.style.border = "solid 2px red";
       return false;
     }
-    descriptionError.innerHTML = '';
+    descriptionError.innerHTML = "";
     // nameError.innerHTML = "Valid Name";
-    descriptionError.style.color = 'green';
-    descriptionInput.style.border = 'solid 2px green';
+    descriptionError.style.color = "green";
+    descriptionInput.style.border = "solid 2px green";
     return true;
   }
   function validatePrice() {
-    const price = document.getElementById('price').value;
-    const priceInput = document.getElementById('price');
+    const price = document.getElementById("price").value;
+    const priceInput = document.getElementById("price");
     if (price.length == 0) {
-      priceError.innerHTML = 'Price field is required';
-      priceError.style.color = 'red';
-      priceInput.style.border = 'solid 2px red';
+      priceError.innerHTML = "Price field is required";
+      priceError.style.color = "red";
+      priceInput.style.border = "solid 2px red";
       return false;
     }
     if (!price.match(/^\d+(\.\d{1,2})?$/)) {
-      priceError.innerHTML = 'Write valid price';
-      priceError.style.color = 'red';
-      nameInput.style.border = 'solid 2px red';
+      priceError.innerHTML = "Write valid price";
+      priceError.style.color = "red";
+      nameInput.style.border = "solid 2px red";
       return false;
     }
-    priceError.innerHTML = '';
+    priceError.innerHTML = "";
     // nameError.innerHTML = "Valid Name";
-    priceError.style.color = 'green';
-    priceInput.style.border = 'solid 2px green';
+    priceError.style.color = "green";
+    priceInput.style.border = "solid 2px green";
     return true;
   }
   function validateQuantity() {
-    const quantity = document.getElementById('quantity').value;
-    const quantityInput = document.getElementById('quantity');
+    const quantity = document.getElementById("quantity").value;
+    const quantityInput = document.getElementById("quantity");
     console.log(name);
     if (quantity.length == 0) {
-      quantityError.innerHTML = 'quantity field is required';
-      quantityError.style.color = 'red';
-      quantityInput.style.border = 'solid 2px red';
+      quantityError.innerHTML = "quantity field is required";
+      quantityError.style.color = "red";
+      quantityInput.style.border = "solid 2px red";
       return false;
     }
     if (!quantity.match(/^[1-9]\d*$/)) {
-      quantityError.innerHTML = 'Write valid quantity';
-      quantityError.style.color = 'red';
-      nameInput.style.border = 'solid 2px red';
+      quantityError.innerHTML = "Write valid quantity";
+      quantityError.style.color = "red";
+      nameInput.style.border = "solid 2px red";
       return false;
     }
-    quantityError.innerHTML = '';
+    quantityError.innerHTML = "";
     // nameError.innerHTML = "Valid Name";
-    quantityError.style.color = 'green';
-    quantityInput.style.border = 'solid 2px green';
+    quantityError.style.color = "green";
+    quantityInput.style.border = "solid 2px green";
     return true;
   }
 
-  form.addEventListener('submit', (event) => {
+  form.addEventListener("submit", (event) => {
     event.preventDefault();
     if (
       !validatePrice() ||
-      !validateQuantity()|| 
-      !validateDescription()|| 
+      !validateQuantity() ||
+      !validateDescription() ||
       !validateImage() ||
       !validateName()
     ) {
       Swal.fire({
-        icon: 'error',
-        title: 'Enter details correctly!!',
+        icon: "error",
+        title: "Enter details correctly!!",
       });
       return false;
     } else {
