--- a/views/admin/list-banner.ejs
+++ b/views/admin/list-banner.ejs
@@ -1,4 +1,10 @@
 <div class="card-body">
+  <% if(response.length==0){%>
+    <div class="d-flex justify-content-center align-items-center">
+      <h2 class="">No Banners Available</h2>
+
+    </div>
+    <%}else{%>
     <div class="table-responsive">
       <div class="table-responsive">
         <table class="table align-middle table-nowrap mb-0">
@@ -38,5 +44,8 @@
         </table>
       </div>
     </div>
+    <%}
+    %>
+    
  
   </div>
