--- a/views/admin/view-users.ejs
+++ b/views/admin/view-users.ejs
@@ -1,4 +1,10 @@
 <section class="">
+  <% if(user.length==0){%>
+    <div class="d-flex justify-content-center align-items-center">
+      <h2 class="">No Users Available</h2>
+
+    </div>
+    <%}else{%>
   <div class="container d-flex justify-content-center">
     <div class="row mt-5">
       <div class="col-md-12">
@@ -82,5 +88,7 @@
       </nav>
     </div>
   </div>
+  <%}
+    %>
 
 </section>
