--- a/views/user/filter-by-category.ejs
+++ b/views/user/filter-by-category.ejs
@@ -56,8 +56,8 @@
 
             <div class="col-lg-4 col-md-4 col-12 col-sm-6">
               <div class="product-cart-wrap mb-30">
-                <div class="product-img-action-wrap">
-                  <div class="product-img product-img-zoom">
+                <div class="product-img-action-wrap d-flex justify-content-cente">
+                  <div class="product-img product-img-zoom" style="height: 180px;width: 236px;">
                     <a href="/product_details/<%= response._id%>">
                       <img
                         class="default-img"
