--- a/views/user/user.ejs
+++ b/views/user/user.ejs
@@ -157,8 +157,8 @@
 
               <div class="col-lg-3 col-md-4 col-12 col-sm-6">
                 <div class="product-cart-wrap mb-30">
-                  <div class="product-img-action-wrap">
-                    <div class="product-img product-img-zoom">
+                  <div class="product-img-action-wrap d-flex justify-content-center">
+                    <div class="product-img product-img-zoom" style="height: 180px;width: 236px;">
                       <a href="/product_details/<%= homeList._id%>">
                         <img
                           class="default-img"
