--- a/views/user/view-cart.ejs
+++ b/views/user/view-cart.ejs
@@ -41,15 +41,27 @@
                                         </td>
                                         <td class="price" cartItemss-title="Price"><span><%=cartItems.cartItems.Price%> </span></td>
                                         <td class="text-center" cartItemss-title="Stock">
-                                    
+                                            <h6 id="stockMessage" class="message" style="color: red;"></h6>
+                                            
+                                                <button class="cart-item-count "
+                                                        onclick="changeQuantity('<%= cartItems._id%>','<%= cartItems.item %>','<%= userId.id %>',-1)">-</button>
+                                                
+                                                <span id="<%= cartItems.item %>">
+                                                    <%= cartItems.quantity%>
+                                                </span>
+                                                <% if(cartItems.cartItems.Quantity> cartItems.quantity){%>
+                                                     <button class="cart-item-count"
+                                                            onclick="changeQuantity('<%= cartItems._id%>','<%= cartItems.item %>','<%= userId.id %>',1)">+</button>
+                                                        <%}%>
+                                                    
+                                            
 
 
-<div class>
-    <button class="cart-item-count mr-5" style="background-color:whitesmoke ;" onclick="changeQuantity('<%= cartItems._id%>','<%= cartItems.item %>','<%= userId.id %>',-1)">-</button>
-    <span id="<%= cartItems.item %>"><%= cartItems.quantity%></span>
-    <button class="cart-item-count ml-5" onclick="changeQuantity('<%= cartItems._id%>','<%= cartItems.item %>','<%= userId.id %>',1)">+</button>
-                                            </div>
+
                                         </td>
+                                        <h2 style="display: none;" id="Quantity">
+                                            <%=cartItems.cartItems.Quantity%>
+                                        </h2>
                                         <!-- <td class="text-right" cartItemss-title="cartItems">
                                             <span>hlo </span>
                                         </td> -->
@@ -136,7 +148,7 @@
                                           <button type="submit" class="btn "><i class="fi-rs-box-alt mr-10"></i>Proceed To
                                               CheckOut</button>
                                               <%} else{%>
-                                                    <p class="text-danger"> This Product Is  Currently Out Of Stock</p>
+                                                    <p class="text-danger"> This product is currently out of stock</p>
       
                                                   <%} %>
                                       </form>
@@ -165,6 +177,24 @@
         console.log(userId);
 
         let quantity = parseInt(document.getElementById(prodId).textContent)
+        let Quantity = document.getElementById('Quantity').textContent
+        if (quantity+1  === parseInt(Quantity-1)) {
+                document.getElementById('stockMessage').innerHTML = "Only One stock Is Left for This Product"
+            }
+        if (count === 1) {
+            if (quantity + 1 === parseInt(Quantity)) {
+                location.reload();
+            }
+        }
+         console.log(parseInt(Quantity));
+        if (count === -1) {
+            if (quantity  === parseInt(Quantity)) {
+                location.reload();
+            }
+        }
+        setTimeout(function() {
+  document.getElementById("stockMessage").style.display = "none";
+}, 5000);
         count=parseInt(count)
 
         
@@ -177,7 +207,8 @@
         cart: cartId,
         product: prodId,
         count: count,
-        quantity: quantity
+        quantity: quantity,
+        Quantity: Quantity
       
       },
       success:(response)=>{
